tests/lifetime/loan/switch_on_loaned_enum_conflicts.err.expected
error: at 8:13: [LT-LoanConflict] In function 'f', block 'entry': cannot read 'e': already borrowed by 'r'
   |
 8 |             switchEnum(e) [A: a_lbl, B: b_lbl]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: borrow of 'e' occurs here
   |
 7 |             r = &mut e;
   |             ^^^^^^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
